--- a/HappyHealthy/HappyHealthy-CSharp.csproj
+++ b/HappyHealthy/HappyHealthy-CSharp.csproj
@@ -200,9 +200,10 @@
     <AndroidResource Include="Resources\layout\Main.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
-    <AndroidResource Include="Resources\layout\activity_add__exe.axml" />
     <AndroidResource Include="Resources\layout\activity_add__food.axml" />
-    <AndroidResource Include="Resources\layout\activity_data_user.axml" />
+    <AndroidResource Include="Resources\layout\activity_data_user.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
     <AndroidResource Include="Resources\layout\activity_develop.axml" />
     <AndroidResource Include="Resources\layout\activity_diabetes.axml">
       <SubType>Designer</SubType>
@@ -437,7 +438,9 @@
     <AndroidResource Include="Resources\drawable\my_re_pre.xml" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\splashlist.xml" />
+    <AndroidResource Include="Resources\drawable\splashlist.xml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\warning.png" />
@@ -1254,6 +1257,15 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable-hdpi\buttonsavefoodex.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable-hdpi\button_ckd_report.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable-hdpi\button_dia_report.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable-hdpi\button_pressure_report.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Forms.2.3.4.247\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.2.3.4.247\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.targets')" />
