--- a/HappyHealthy/packages.config
+++ b/HappyHealthy/packages.config
@@ -21,6 +21,7 @@
   <package id="System.ComponentModel.TypeConverter" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.Console" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="monoandroid60" />
+  <package id="System.Diagnostics.Process" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.Globalization" version="4.3.0" targetFramework="monoandroid60" />
@@ -32,13 +33,15 @@
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.Linq" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="monoandroid60" />
-  <package id="System.Net.Http" version="4.3.0" targetFramework="monoandroid60" />
+  <package id="System.Net.Http" version="4.3.1" targetFramework="monoandroid71" />
   <package id="System.Net.Primitives" version="4.3.0" targetFramework="monoandroid60" />
+  <package id="System.Net.Requests" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.Reflection" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="monoandroid60" />
+  <package id="System.Reflection.TypeExtensions" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.Runtime" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="monoandroid60" />
