--- a/HappyHealthy/HappyHealthy-CSharp.csproj
+++ b/HappyHealthy/HappyHealthy-CSharp.csproj
@@ -157,6 +157,7 @@
     <Compile Include="TEMP_DiabetestTABLE.cs" />
     <Compile Include="TEMP_KidneyTABLE.cs" />
     <Compile Include="TEMP_PressureTABLE.cs" />
+    <Compile Include="TimePickerFragment.cs" />
     <Compile Include="UserTABLE.cs" />
     <Compile Include="Notification.cs" />
     <Compile Include="PressureTABLE.cs" />
@@ -1252,6 +1253,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Web References\HHCSService\HHCSService.disco" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable-hdpi\ic_clock.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable-hdpi\save_button_ac_user.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable-hdpi\logout_button_ac_user.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Forms.2.3.4.247\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.2.3.4.247\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.targets')" />
