--- a/HappyHealthy/HappyHealthy-CSharp.csproj
+++ b/HappyHealthy/HappyHealthy-CSharp.csproj
@@ -151,6 +151,7 @@
     <Compile Include="Diabetes.cs" />
     <Compile Include="Doctor.cs" />
     <Compile Include="DoctorTABLE.cs" />
+    <Compile Include="ExceptionHandlerClass.cs" />
     <Compile Include="GlobalState.cs" />
     <Compile Include="History_Doctor.cs" />
     <Compile Include="IDatabaseSync.cs" />
@@ -1255,10 +1256,10 @@
     <AndroidResource Include="Resources\drawable-hdpi\buttonsavefoodex.png" />
   </ItemGroup>
   <ItemGroup>
-    <WebReferenceUrl Include="http://hhcsdm.somee.com/HHCSService/HHCSService.asmx">
+    <WebReferenceUrl Include="http://hhcssdm.somee.com/hhcsws/HHCSService.asmx">
       <UrlBehavior>Dynamic</UrlBehavior>
       <RelPath>Web References\HHCSService\</RelPath>
-      <UpdateFromURL>http://hhcsdm.somee.com/HHCSService/HHCSService.asmx</UpdateFromURL>
+      <UpdateFromURL>http://hhcssdm.somee.com/hhcsws/HHCSService.asmx</UpdateFromURL>
       <ServiceLocationURL>
       </ServiceLocationURL>
       <CachedDynamicPropName>
